--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Thank you for visiting my websites</p>
 
     <p>This is 2nd pragraph</p>
+    <P>This is 3rd paragraph</P>
     
 </body>
 </html>
