--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <p>This is 2nd pragraph</p>
     <P>This is 3rd paragraph</P>
-    
+    <p>My country flag as followings</p>
+
+    <img src="Flag_of_Bangladesh.svg" alt="">
 </body>
 </html>
